website/static/css/site.css
/* ... */
.node-title {
    line-height: 50px;
    border-bottom: none;
    margin-top: 0.3em;
    font-size: 43px;
    font-weight: 300;
}
.text-300 {
    font-weight: 300;
}


#projectSubnav .navbar-collapse {
    padding-left: 0; 
    padding-right: 0;
}

.osf-dash-portlet {
    background-color: #eee;
    width: 100%;
    height: 40px;
    margin-bottom: 20px;
    border: 2px dashed #ddd;
}

.page-header.visible-xs {
    margin: 0;
}


@media (max-width: 767px) {
    .navbar .search-query {
        width: 100%;
    }
    .navbar-nav .open .dropdown-menu>li>a {
        color: #FFF;
    }
    .osf-project-navbar li>a {
        padding-left: 30px;
        padding-right: 30px;
    }   
    .osf-project-navbar a.project-title {
    }
    .project-nav {
        overflow: hidden;
    }
}

@media (min-width: 768px) {
    .osf-navbar .navbar-nav>li>a, .osf-project-navbar li>a {
        padding-left: 7px;
        padding-right: 7px;    
    }
    .navbar .search-query {
    width: 190px;
    }
    .osf-project-navbar a.project-title {
        max-width: 190px;
    }
    .navbar-brand {
        margin-left: 0 !important;
        padding-left: 0;
    }

}

@media (min-width: 992px) {
    .osf-navbar .navbar-nav>li>a, .osf-project-navbar li>a {
        padding-left: 10px;
        padding-right: 10px;    
    }
    .navbar .search-query {
        width: 360px;
    }
    .osf-project-navbar a.project-title {
        max-width: 300px;
    }
}
@media (min-width: 1200px) {
    .osf-navbar .navbar-nav>li>a, .osf-project-navbar li>a {
        padding-left: 15px;
        padding-right: 15px;    
    }
    .navbar .search-query {
    width: 270px;
    }
    .osf-project-navbar a.project-title {
        max-width: 400px;
    }
}

/* Search bar */
.osf-search {
    padding: 10px 0;
    background: #B8ECC0;
    margin-top: -30px;
    position: fixed;
    width: 100%;
    box-shadow: 0 0 9px -2px #464545;
    z-index: 11;
    left: 0;
}
.osf-search-input {
    background: none;
    border: none;
    box-shadow: none;
    border-bottom: 1px dotted #FFF;
    border-radius: 0;
    padding: 15px 0;
    font-size: 20px;
    color: #214762;
    font-weight: 300;
}
.osf-search-input:focus {
    outline : 0 !important;
    box-shadow: none;
    border-bottom: 1px dotted #FFF;
}
.osf-search-btn {
    color: #214762;
    background: rgba(0, 0, 0, 0);
}

.osf-search-btn:hover {
    color: #738EA2;
}


#searchPageFullBar::-webkit-input-placeholder {
   color: #738EA2;
}

#searchPageFullBar:-moz-placeholder { /* Firefox 18- */
   color: #738EA2;  
}

#searchPageFullBar::-moz-placeholder {  /* Firefox 19+ */
   color: #738EA2;  
}

#searchPageFullBar:-ms-input-placeholder {  
   color: #738EA2;  
}
#searchControls>.row {
    padding-top: 60px;
}

